Deploy unique landing page with custom theme

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smartsift - Professional AI Solution</title>
+    <title>Smartsift - SmartSift is an AI-driven e-commerce platform that</title>
     <meta name="description" content="SmartSift is an AI-driven e-commerce platform that helps small businesses identify and onboard niche influencers on Web3 for targeted marketing campaigns.">
-    <meta name="keywords" content="smartsift, AI, SaaS, business, productivity, automation">
+    <meta name="keywords" content="smartsift, AI, SaaS, ">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Smartsift">
-    <meta property="og:description" content="SmartSift is an AI-driven e-commerce platform that helps small businesses identify and onboard niche influencers on Web3 for targeted marketing campaigns.">
+    <meta property="og:description" content="SmartSift is an AI-driven e-commerce platform that helps small businesses identify and onboard niche...">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bullrushinvestments.github.io/smartsift/">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Smartsift">
-    <meta name="twitter:description" content="SmartSift is an AI-driven e-commerce platform that helps small businesses identify and onboard niche influencers on Web3 for targeted marketing campaigns.">
+    <meta name="twitter:description" content="SmartSift is an AI-driven e-commerce platform that helps small businesses identify and onboard niche...">
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,7 +38,7 @@
     <!-- Hero Section -->
     <header class="hero">
         <div class="container">
-            <h1>Transform Your Business with <span class="gradient-text">Smartsift</span></h1>
+            <h1>Transform Your Workflow with <span class="gradient-text">Smartsift</span></h1>
             <p class="hero-subtitle">SmartSift is an AI-driven e-commerce platform that helps small businesses identify and onboard niche influencers on Web3 for targeted marketing campaigns.</p>
             <div class="hero-cta">
                 <a href="pricing.html" class="btn btn-primary btn-large">Start Free Trial</a>
@@ -46,15 +46,15 @@
             </div>
             <div class="hero-stats">
                 <div class="stat">
-                    <span class="stat-number">10K+</span>
+                    <span class="stat-number">15K+</span>
                     <span class="stat-label">Active Users</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-number">99.9%</span>
+                    <span class="stat-number">99.90%</span>
                     <span class="stat-label">Uptime</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-number">24/7</span>
+                    <span class="stat-number">12/6</span>
                     <span class="stat-label">Support</span>
                 </div>
             </div>
@@ -69,33 +69,33 @@
             <div class="features-grid">
                 <div class="feature-card">
                 <div class="feature-icon">&#128202;</div>
-                <h3>AI-Powered Analytics</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Natural Language</h3>
+                <p>Intuitive conversational interface</p>
             </div>
 <div class="feature-card">
                 <div class="feature-icon">&#9889;</div>
-                <h3>Real-time Insights</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Smart Automation</h3>
+                <p>AI handles repetitive tasks automatically</p>
             </div>
 <div class="feature-card">
                 <div class="feature-icon">&#128640;</div>
-                <h3>Automated Workflows</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Learning System</h3>
+                <p>Gets smarter the more you use it</p>
             </div>
 <div class="feature-card">
                 <div class="feature-icon">&#128101;</div>
-                <h3>Team Collaboration</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Multi-modal AI</h3>
+                <p>Process text, images, and documents</p>
             </div>
 <div class="feature-card">
                 <div class="feature-icon">&#128279;</div>
-                <h3>Custom Integrations</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Custom Training</h3>
+                <p>Fine-tune models on your specific data</p>
             </div>
 <div class="feature-card">
                 <div class="feature-icon">&#128222;</div>
-                <h3>24/7 Support</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Explainable AI</h3>
+                <p>Understand how decisions are made</p>
             </div>
             </div>
         </div>
@@ -111,9 +111,9 @@
                 <h3>Starter</h3>
                 <div class="price">$9<span>/month</span></div>
                 <ul>
-                    <li>Basic features</li><li>1 user</li><li>Email support</li>
+                    <li>Core features</li><li>1 user</li><li>Email support</li><li>5GB storage</li>
                 </ul>
-                <a href="https://buy.stripe.com/test_placeholder" class="btn btn-secondary">
+                <a href="pricing.html" class="btn btn-secondary">
                     Get Started
                 </a>
             </div>
@@ -121,9 +121,9 @@
                 <h3>Professional</h3>
                 <div class="price">$29<span>/month</span></div>
                 <ul>
-                    <li>All features</li><li>5 users</li><li>Priority support</li><li>API access</li>
+                    <li>All features</li><li>5 users</li><li>Priority support</li><li>50GB storage</li><li>API access</li>
                 </ul>
-                <a href="https://buy.stripe.com/test_placeholder" class="btn btn-primary">
+                <a href="pricing.html" class="btn btn-primary">
                     Get Started
                 </a>
             </div>
@@ -131,9 +131,9 @@
                 <h3>Enterprise</h3>
                 <div class="price">$99<span>/month</span></div>
                 <ul>
-                    <li>Unlimited users</li><li>Dedicated support</li><li>Custom integrations</li><li>SLA guarantee</li>
+                    <li>Unlimited users</li><li>Dedicated support</li><li>Unlimited storage</li><li>Custom integrations</li><li>SLA guarantee</li>
                 </ul>
-                <a href="https://buy.stripe.com/test_placeholder" class="btn btn-secondary">
+                <a href="pricing.html" class="btn btn-secondary">
                     Get Started
                 </a>
             </div>
@@ -145,7 +145,7 @@
     <section class="cta">
         <div class="container">
             <h2>Ready to Get Started?</h2>
-            <p>Join thousands of businesses already using Smartsift</p>
+            <p>Join 15K+ users already using Smartsift</p>
             <a href="pricing.html" class="btn btn-primary btn-large">Start Your Free Trial</a>
         </div>
     </section>
@@ -156,7 +156,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <h3>Smartsift</h3>
-                    <p>SmartSift is an AI-driven e-commerce platform that helps small businesses identify and onboard niche influencers on Web3 for targeted marketing campaigns.</p>
+                    <p>SmartSift is an AI-driven e-commerce platform that helps small businesses identify and onboard niche...</p>
                 </div>
                 <div class="footer-links">
                     <h4>Product</h4>
@@ -183,7 +183,6 @@
     </footer>
 
     <script>
-        // Smooth scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
